Solve bug where button text was overflowing, reduce logo size on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ header {
 .navbar-brand {
     font-family: "Poetsen One", sans-serif;
     font-weight: 700;
-    font-size: 300%;
+    font-size: 200%;
     color: #fff;
 }
 
@@ -36,6 +36,7 @@ header {
 .answer-btn {
     padding-top: 10px;
     padding-bottom: 10px;
+    white-space: normal;
 }
 
 /* Styles for larger screens */
@@ -43,5 +44,9 @@ header {
     .answer-btn {
         padding-top: 40px;
         padding-bottom: 40px;
+    }
+
+    .navbar-brand {
+        font-size: 300%;
     }
 }
